# owl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  owl.cabal  package.yaml  reference.md  skeleton.html  tracking.norg
examples/: anonymous_functions.owl  comments.owl  currying.owl  custom_types.owl  declarations.owl  expressions.owl  fib.owl  fibonacci.owl  functions.owl  hello_world.owl  identifiers.owl  idents.owl  logical_operations.owl  precedence.owl  sequences.owl
src/: Analysis.hs  Ast.hs  Eval.hs  Lexer.x  Parser.info  Parser.y  Syntax.hs  codegen.rs  ir.rs  lib.rs  repl.rs  skeleton.html  syntax.rs
src/Analysis/: Types.hs
src/Eval/: Data.hs  Environment.hs  Pretty.hs
src/Syntax/: AST.hs  Lexer.x  Parser.y  Pretty.hs
src/codegen/: wasm.rs
src/ir/: cps.rs
src/syntax/: ast.rs  error.rs  lexer.rs  parse.rs  parser.rs  pretty.rs  span.rs
test/: ParserTests.hs
