[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pellets"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = "0.4.0"
chumsky = "0.9.3"
logos = "0.13.0"
thiserror = "1.0.56"
