[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pellets"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = "0.4.0"
chumsky = { version = "1.0.0-alpha.6", features = ["label"]}
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
logos = "0.13.0"
rstest = "0.18.2"
rustyline = { version = "13.0.0", features = ["with-file-history"] }
thiserror = "1.0.56"
